--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,257 @@
-aiohttp==3.7.4.post0
-amqp==5.0.5
-asgiref==3.5.0
-async-timeout==3.0.1
+absl-py==0.11.0
+alembic==1.5.7
+altgraph==0.17
+appdirs==1.4.4
+argon2-cffi==20.1.0
+asgiref==3.2.7
+asttokens==2.0.4
+astunparse==1.6.3
+async-generator==1.10
+asyncio==3.4.3
 atomicwrites==1.4.0
 attrs==20.3.0
-autopep8==1.5.5
-beautifulsoup4==4.10.0
-billiard==3.6.3.0
-celery==5.0.5
-certifi==2021.10.8
-cffi==1.15.0
+autopep8==1.5.4
+backcall==0.2.0
+beautifulsoup4==4.9.3
+black==21.9b0
+bleach==3.2.1
+blinker==1.4
+bs4==0.0.1
+cachetools==4.2.0
+cairocffi==1.2.0
+certifi==2021.5.30
+cffi==1.14.6
 chardet==4.0.0
-charset-normalizer==2.0.11
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.1.6
-cloudinary==1.29.0
+click==8.0.1
 colorama==0.4.4
-cryptography==36.0.1
-cssselect==1.1.0
+colorgram.py==1.2.0
+commonmark==0.9.1
+configparser==5.0.2
+cors==1.0.1
+crayons==0.4.0
+cryptography==35.0.0
+cssselect2==0.4.1
+cycler==0.10.0
 decorator==4.4.2
-defusedxml==0.7.1
-Deprecated==1.2.13
-Django==4.0.2
-django-allauth==0.44.0
-django-ckeditor==6.2.0
-django-cloudinary-storage==0.3.0
-django-common-helpers==0.9.2
-django-js-asset==1.2.2
-django-paypal==1.1
-django-redis==5.2.0
-django-timezone-field==4.1.1
+defusedxml==0.6.0
+distlib==0.3.1
+Django==3.0.5
+django-qr-code==2.1.0
+django-widget-tweaks==1.4.8
+dominate==2.5.2
+emoji==0.6.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+executing==0.5.4
+ffmpeg-python==0.2.0
+filelock==3.0.12
+Flask==2.0.1
+Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.4.4.1
+Flask-Cors==3.0.10
+Flask-Gravatar==0.5.0
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
 future==0.18.2
-gunicorn==20.1.0
-huepy==1.2.1
-idna==3.3
+gast==0.4.0
+gevent==21.1.2
+google-api-core==1.28.0
+google-api-python-client==2.29.0
+google-auth==1.30.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.2
+google-cloud-core==1.6.0
+google-cloud-storage==1.38.0
+google-crc32c==1.1.2
+google-pasta==0.2.0
+google-resumable-media==1.3.0
+googleapis-common-protos==1.53.0
+greenlet==1.1.0
+grpcio==1.34.0
+gunicorn==20.0.4
+h5py==3.1.0
+html2image==1.1.2
+html5lib==1.1
+httplib2==0.20.2
+ibm-cloud-sdk-core==1.7.3
+ibm-watson==5.0.0
+icecream==2.0.0
+idna==2.10
 imageio==2.9.0
-imageio-ffmpeg==0.4.3
+imageio-ffmpeg==0.4.5
+img2pdf==0.4.3
+imgkit==1.2.2
 iniconfig==1.1.1
-kombu==5.0.2
-lxml==4.7.1
-markdown2==2.4.2
-maxminddb==2.0.3
-mock==4.0.3
+instaloader==4.6
+ipykernel==5.4.2
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==2.0.1
+jdcal==1.4.1
+jedi==0.17.2
+Jinja2==3.0.1
+joblib==1.0.0
+jovian==0.2.30
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.7.0
+jupyterlab==2.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lab==6.2
+lxml==4.6.2
+mailer==0.8.1
+Mako==1.1.4
+Markdown==3.3.3
+MarkupSafe==2.0.1
+matplotlib==3.3.3
+mistune==0.8.4
 moviepy==1.0.3
-multidict==5.1.0
-numpy==1.20.1
-oauthlib==3.2.0
-packaging==21.3
-Pillow==9.0.1
+mutagen==1.45.1
+mypy-extensions==0.4.3
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+newsapi-python==0.2.6
+nltk==3.6.7
+notebook==6.1.5
+numpy==1.22.0
+oauthlib==3.1.0
+opencv-python==4.4.0.46
+openpyxl==3.0.5
+opt-einsum==3.3.0
+packaging==20.8
+pandas==1.3.5
+pandocfilters==1.4.3
+parso==0.7.1
+pathspec==0.9.0
+pefile==2019.4.18
+pickleshare==0.7.5
+pikepdf==4.0.1.post1
+Pillow==8.1.2
+pipenv==2020.11.15
+platformdirs==2.4.0
 pluggy==0.13.1
+prettytable==2.0.0
 proglog==0.1.9
-prompt-toolkit==3.0.17
-psycopg2-binary==2.9.3
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
-pycparser==2.21
-pycryptodome==3.14.1
-PyJWT==2.3.0
-pyparsing==3.0.7
-pyquery==1.4.3
+pycparser==2.20
+pycrypto==2.6.1
+pycryptodomex==3.11.0
+pyee==8.1.0
+Pygments==2.7.3
+pyinstaller==4.7
+pyinstaller-hooks-contrib==2020.10
+PyJWT==1.7.1
+pyparsing==2.4.7
+PyPDF2==1.26.0
+pyperclip==1.8.1
+Pyphen==0.10.0
+pypiwin32==223
+pyppeteer==0.2.5
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyqt5-tools==5.15.4.3.2
+pyrsistent==0.17.3
 PySocks==1.7.1
-pytest==6.2.2
-python-crontab==2.5.1
+pytest==6.2.4
+python-barcode==0.13.1
 python-dateutil==2.8.1
-python-decouple==3.6
-python3-openid==3.2.0
-pytz==2021.3
-razorpay==1.2.0
-readtime==1.1.1
-redis==4.1.2
-requests==2.27.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-responses==0.13.0
-schedule==1.0.0
+python-decouple==3.3
+python-dotenv==0.19.2
+python-editor==1.0.4
+pytube==11.0.1
+pytz==2020.1
+pywin32==300
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==20.0.0
+qrcode==6.1
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
+qtconsole==5.0.1
+QtPy==1.9.0
+rapidfuzz==1.8.2
+regex==2021.10.23
+requests==2.25.1
+requests-file==1.5.1
+requests-oauthlib==1.3.0
+rich==10.13.0
+rsa==4.6
+scikit-learn==1.0.2
+scipy==1.5.4
+seaborn==0.11.0
+segno==1.3.1
+selenium==3.141.0
+Send2Trash==1.5.0
+simplejson==3.17.2
 six==1.16.0
-social-auth-app-django==5.0.0
-social-auth-core==4.2.0
-soupsieve==2.3.1
-sqlparse==0.4.2
+soupsieve==2.1
+spotdl==3.9.0
+spotipy==2.19.0
+SQLAlchemy==1.4.20
+sqlparse==0.3.1
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+threadpoolctl==2.1.0
+tinycss2==1.1.0
+tinydb==4.5.2
+tldextract==3.1.0
 toml==0.10.2
-tqdm==4.59.0
-tweepy==4.5.0
-typing-extensions==3.7.4.3
-tzdata==2021.5
-tzlocal==2.1
-urllib3==1.26.8
-vine==5.0.0
+tomli==1.2.1
+torch==1.7.1
+torchvision==0.2.2.post3
+tornado==6.1
+tqdm==4.61.0
+traitlets==5.0.5
+tweet-capture==0.0.7
+twilio==6.50.1
+txt2tags==3.7
+typing-extensions==3.10.0.2
+Unidecode==1.3.2
+uritemplate==4.1.1
+urllib3==1.26.6
+uuid==1.30
+virtualenv==20.2.2
+virtualenv-clone==0.5.4
+visitor==0.1.3
 wcwidth==0.2.5
-whitenoise==5.3.0
-wrapt==1.13.3
-yarl==1.6.3
+WeasyPrint==52.4
+webdriver-manager==3.5.2
+webencodings==0.5.1
+websocket-client==0.48.0
+websockets==8.1
+Werkzeug==2.0.1
+wget==3.2
+widgetsnbextension==3.5.1
+win10toast==0.9
+wordcloud==1.8.1
+wrapt==1.12.1
+WTForms==2.3.3
+xlrd==2.0.1
+yt-dlp==2021.10.22
+ytmusicapi==0.19.4
+zope.event==4.5.0
+zope.interface==5.4.0
